--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #b39ddb;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
