--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,15 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  background: #d9a7c7;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #fffcdc, #d9a7c7);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  font-family: 'Merriweather', serif;
 }
 
 .App-header {
-  background-color: #b39ddb;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: #d9a7c7;
+  padding: 1em;
+  text-align: right;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -30,4 +25,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+img {
+  padding: 1em;
+  max-width: 400px;
+  max-height: 400px;
+}
+
+.dog-breed-images {
+  margin: 1em;
 }
